[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/health_bar_back.png" type="Texture" id=1]
[ext_resource path="res://UI/PlayerHealthBar.gd" type="Script" id=2]
[ext_resource path="res://UI/health_bar_over.png" type="Texture" id=3]
[ext_resource path="res://UI/health_bar_prog.png" type="Texture" id=4]

[node name="PlayerHealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
grow_horizontal = 2
grow_vertical = 2
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.670588, 0.317647, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="."]
grow_horizontal = 2
grow_vertical = 2
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.054902, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
